welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:7: error: value T is not a member of Unit
possible cause: maybe a semicolon is missing before `value T'?
	} T(T.length-1)=getCouleurSol();
          ^